# Trion-Site

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  index.html  package.json  progress.txt
apps/api/: pyproject.toml
apps/api/src/api/: config.py  main.py
apps/api/src/api/routers/: health.py
apps/api/tests/: test_main.py
apps/web/: index.html  next.config.ts  package-lock.json  package.json
apps/web/_validation/: batch1-clean.txt  batch2.js  css-probe.mjs  figma-b64.json  fresh-shots.mjs  inject-${name}.js  inject-01-hero.js  inject-02-paraquem.js  inject-03-solucoes.js  inject-04-metodologia.js  inject-05-metricas.js  inject-06-casos.js  inject-07-diferencial.js  inject-08-prova-social.js  inject-09-cta.js  inject-10-footer.js  reference-scrape.mjs  screenshot.mjs  strips-mobile.mjs  strips.mjs
apps/web/_validation/references/: cross-table.md  recommendations.md
apps/web/_validation/scripts/: capture-webhub.mjs
apps/web/_validation/webhub/: head.json  hero.html  libs.json  tokens.md  webhub.computed.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/animations/: FadeInScroll.tsx  PinnedSection.tsx  SplitTextReveal.tsx
apps/web/components/layout/: Footer.tsx  Header.tsx  Loader.tsx  Navbar.tsx
apps/web/components/providers/: SmoothScrollProvider.tsx
apps/web/docs/: google-apps-script.js
apps/web/js/: main.js
apps/web/lib/: gsap-init.ts  usePageInit.ts  utils.ts
css/: style.css
directives/: constraints.md  milestones.md  specs.md
js/: main.js
(+39 files in other folders)
